feat : 카프카 미러메이커

--- a/kafka_2.12-2.5.0/config/connect-mirror-maker.properties
+++ b/kafka_2.12-2.5.0/config/connect-mirror-maker.properties
@@ -23,16 +23,16 @@ clusters = A, B
 # connection information for each cluster
 # This is a comma separated host:port pairs for each cluster
 # for e.g. "A_host1:9092, A_host2:9092, A_host3:9092"
-A.bootstrap.servers = A_host1:9092, A_host2:9092, A_host3:9092
-B.bootstrap.servers = B_host1:9092, B_host2:9092, B_host3:9092
+A.bootstrap.servers = a-kafka:9092
+B.bootstrap.servers = b-kafka:9092
 
 # enable and configure individual replication flows
 A->B.enabled = true
 
 # regex which defines which topics gets replicated. For eg "foo-.*"
-A->B.topics = .*
+A->B.topics = test
 
-B->A.enabled = true
+B->A.enabled = false
 B->A.topics = .*
 
 # Setting replication factor of newly created remote topics
